# vignesh

./: .gitignore  README.md
ai-receptionist/: .env.example  .gitignore  README.md  config.example.json  config.json  go.mod  go.sum  main.go  plan.md  prompt-personal.txt  prompt.txt  test-cases-day1.md  test-cases-julia-eval.md  test-cases.md
ai-receptionist/graphiti/: README.md  pyproject.toml  requirements.txt
ai-receptionist/graphiti/app/: db.py  graphiti_client.py  main.py  models.py
deploy/: action-verifier.example.json  whatsapp-bridge-watchdog.service  whatsapp-bridge-watchdog.timer
scripts/: backfill-outreach-honcho.py  deploy-stella-intelligence.sh  grant-teddy-hermes-owner.sh  install-hermes-action-verifier-hook.sh  install-hermes-default-yolo-hook.sh  install-hermes-whatsapp-patch-hook.sh  install-scrapling-hermes-vps.sh  install-whatsapp-bridge-watchdog.sh  open-whatsapp-allow-owners-only.py  outreach_tasks.py  patch-hermes-agent-minimax-tool-leak.py  patch-hermes-approvals-bypass.py  patch-hermes-config-honcho-memory-injection.py  patch-hermes-config-minimax-m3.py  patch-hermes-config-nemotron-ultra-chain.py  patch-hermes-config-scrapling-mcp.py  patch-hermes-gateway-agent-end-verifier.py  patch-hermes-gateway-media-reports-fallback.py  patch-hermes-gateway-outreach-context.py  patch-hermes-gateway-whatsapp-sanitize.py  patch-hermes-install-honcho-ai.sh  patch-hermes-skills-no-wabot.py  patch-hermes-slash-access-whatsapp-jid.py  patch-hermes-soul-autonomous-agent.py  patch-hermes-soul-messy-prompts.py  patch-hermes-soul-multistep-plan.py  (+20 more)
(+235 files in other folders)
