[project]
name = "ai-receptionist-graphiti"
version = "0.1.0"
description = "Graphiti sidecar service for ai-receptionist (ingest/recall/dream proposals)."
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "httpx>=0.27.0",
  "graphiti-core>=0.4.3",
]

[tool.uvicorn]
factory = false

